cmake_minimum_required(VERSION 3.8)
project(robot_test_radar)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
# find_package(nav_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
# find_package(tf2_ros REQUIRED)
# find_package(Eigen3 REQUIRED)
# find_package(PCL REQUIRED)
# find_package(pcl_conversions REQUIRED)
# find_package(tf2_geometry_msgs REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()
include_directories(
    ${PCL_INCLUDE_DIRS}
)
add_executable(${PROJECT_NAME}_node src/${PROJECT_NAME}_node.cpp)
# include_directories(${LIBEVDEV_INCLUDE_DIRS})
# target_link_libraries(${PROJECT_NAME}_node Eigen3::Eigen)
ament_target_dependencies(${PROJECT_NAME}_node 
rclcpp
# nav_msgs
sensor_msgs
# tf2_ros
# PCL
# pcl_conversions
# tf2_geometry_msgs
)
install(TARGETS
        ${PROJECT_NAME}_node
        DESTINATION lib/${PROJECT_NAME})

install(
    DIRECTORY launch
    DESTINATION share/${PROJECT_NAME}
)
ament_package()
